@@ -38,6 +38,9 @@
    - dtucker@cvs.openbsd.org 2007/11/03 02:00:32
      [ssh.c]
      Use xstrdup/xfree when saving pwname and pwdir; ok deraadt@
+   - deraadt@cvs.openbsd.org 2007/11/03 02:03:49
+     [ssh.c]
+     avoid errno trashing in signal handler; ok dtucker
 
 20071030
  - (djm) OpenBSD CVS Sync
@@ -3455,4 +3458,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4805 2007/12/02 12:21:16 dtucker Exp $
+$Id: ChangeLog,v 1.4806 2007/12/02 12:22:52 dtucker Exp $
